--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Calculator</title>
     <script defer src="javascript.js"></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -12,27 +12,28 @@
       <div class="display">54</div>
       <div class="buttons-div">
         <div class="first-row">
-          <button>7</button>
-          <button>8</button>
-          <button>9</button>
-          <button>/</button>
+          <button class="number">7</button>
+          <button class="number">8</button>
+          <button class="number">9</button>
+          <button class="divide-operator">/</button>
         </div>
         <div class="second-row">
-          <button>4</button>
-          <button>5</button>
-          <button>6</button>
-          <button>*</button>
+          <button class="number">4</button>
+          <button class="number">5</button>
+          <button class="number">6</button>
+          <button class="multiply-operator">*</button>
         </div>
         <div class="third-row">
-          <button>1</button>
-          <button>2</button>
-          <button>3</button>
-          <button>+</button>
+          <button class="number">1</button>
+          <button class="number">2</button>
+          <button class="number">3</button>
+          <button class="add-operator">+</button>
         </div>
         <div class="fourth-row">
-          <button>0</button>
-          <button>-</button>
-          <button>=</button>
+          <button class="number">0</button>
+          <button class="subtract-operator">-</button>
+          <button class="equal-operator">=</button>
+          <button class="all-clear">AC</button>
         </div>
       </div>
     </div>
