--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
       <div class="display">54</div>
       <div class="buttons-div">
         <div class="first-row">
-          <button class="number">7</button>
-          <button class="number">8</button>
-          <button class="number">9</button>
+          <button class="number-btn">7</button>
+          <button class="number-btn">8</button>
+          <button class="number-btn">9</button>
           <button class="divide-operator">/</button>
         </div>
         <div class="second-row">
-          <button class="number">4</button>
-          <button class="number">5</button>
-          <button class="number">6</button>
+          <button class="number-btn">4</button>
+          <button class="number-btn">5</button>
+          <button class="number-btn">6</button>
           <button class="multiply-operator">*</button>
         </div>
         <div class="third-row">
-          <button class="number">1</button>
-          <button class="number">2</button>
-          <button class="number">3</button>
+          <button class="number-btn">1</button>
+          <button class="number-btn">2</button>
+          <button class="number-btn">3</button>
           <button class="add-operator">+</button>
         </div>
         <div class="fourth-row">
-          <button class="number">0</button>
+          <button class="number-btn">0</button>
           <button class="subtract-operator">-</button>
           <button class="equal-operator">=</button>
           <button class="all-clear">AC</button>
