--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Calculator</title>
     <script defer src="javascript.js"></script>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -34,19 +37,19 @@
             </svg>
           </button>
           <button class="percent">%</button>
-          <button class="divide operator">/</button>
+          <button class="divide operator">÷</button>
         </div>
         <div class="second-row">
           <button class="number-btn">7</button>
           <button class="number-btn">8</button>
           <button class="number-btn">9</button>
-          <button class="multiply operator">x</button>
+          <button class="multiply operator">⨯</button>
         </div>
         <div class="third-row">
           <button class="number-btn">4</button>
           <button class="number-btn">5</button>
           <button class="number-btn">6</button>
-          <button class="subtract operator">-</button>
+          <button class="subtract operator">–</button>
         </div>
         <div class="fourth-row">
           <button class="number-btn">1</button>
