--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
             </svg>
           </button>
           <button data-action="percent" class="percent">%</button>
-          <button data-action="divide" class="divide operator">÷</button>
+          <button data-action="divide" data-value="÷" class="divide operator">÷</button>
         </div>
         <div class="second-row">
           <button data-action="number" data-value="7" class="number-btn">7</button>
           <button data-action="number" data-value="8" class="number-btn">8</button>
           <button data-action="number" data-value="9" class="number-btn">9</button>
-          <button data-action="multiply" class="multiply operator">⨯</button>
+          <button data-action="multiply" data-value="⨯" class="multiply operator">⨯</button>
         </div>
         <div class="third-row">
           <button data-action="number" data-value="4" class="number-btn">4</button>
           <button data-action="number" data-value="5" class="number-btn">5</button>
           <button data-action="number" data-value="6" class="number-btn">6</button>
-          <button data-action="subtract" class="subtract operator">–</button>
+          <button data-action="subtract" data-value="–" class="subtract operator">–</button>
         </div>
         <div class="fourth-row">
           <button data-action="number" data-value="1" class="number-btn">1</button>
           <button data-action="number" data-value="2" class="number-btn">2</button>
           <button data-action="number" data-value="3" class="number-btn">3</button>
-          <button data-action="add" class="add operator">+</button>
+          <button data-action="add" data-value="+" class="add operator">+</button>
         </div>
         <div class="fifth-row">
           <button data-action="number" data-value="0" class="number-btn zeroBtn">0</button>
