Add a plus/minus button with functional logic

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
           <button data-action="add" data-value="+" class="add operator">+</button>
         </div>
         <div class="fifth-row">
-          <button data-action="number" data-value="0" class="number-btn zeroBtn">0</button>
+          <button data-action="plus/minus" data-value="-">+/-</button>
+          <button data-action="number" data-value="0" class="number-btn">0</button>
           <button data-action="dot" data-value="." class="dot">.</button>
           <button data-action="equal" class="equal operator">=</button>
         </div>
